15.Kubernetes 其他组件/4.Cilium/hubble-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: kube-system
  labels:
    app.kubernetes.io/name: hubble-ui
    app.kubernetes.io/part-of: cilium
spec:
  ingressClassName: nginx
  rules:
    - host: hubble-ui.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
